Meta-data upload
This is not part of the OpenCDE-API specification, but makes it easier to use.
